<resources>
    <string name="app_name">Geldüberwacher</string>
    <string name="title_activity_list_element">ListElement</string>
    <string name="cat_key_official">Offiziell</string>
    <string name="cat_key_necessary">Nützlich</string>
    <string name="cat_key_fun">Freizeit</string>
    <string name="disclaimer_saved_changes">Änderungen gespeichert</string>
    <string name="disclaimer_deleted">Eintrag gelöscht</string>
    <string name="disclaimer_no_infos">Keine Notizen</string>
    <string name="button_save">Speichern</string>
    <string name="demotext_subject">Betreff</string>
    <string name="demotext_value">+35</string>
    <string name="demotext_date">01.01.2000</string>
    <string name="demotext_category">Kategorie</string>
    <string name="demotext_info">Zusätzliche Informationen \nGroßer Spaß \nund ein Kanu</string>
    <string name="hint_subject">Betreff</string>
    <string name="hint_value">0.0</string>
    <string name="hint_info">Zusätzliche Informationen</string>
    <string name="euroDescription">euro</string>
    <string name="deleteDialog_titleQuestion">Eintrag wirklich löschen?</string>
    <string name="deleteDialog_explanation">Der Eintrag wird entgültig von diesem Gerät entfernt</string>
    <string name="deleteDialog_confirm">Löschen</string>
    <string name="deleteDialog_abort">Abbrechen</string>

    <string-array name="date_ranges">
        <item>Alle</item>
        <item>Dieser Monat</item>
        <item>Diese Woche</item>
        <item>Letzer Monat</item>
        <item>Letzte Woche</item>
    </string-array>
</resources>
